<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>models</artifactId>
    <groupId>cs.wisc.edu</groupId>
    <version>1.0</version>
    <packaging>jar</packaging>
    <repositories>
      <repository>
	<id>Internal repository</id>
	<url>file://${basedir}/mvn</url>
      </repository>
    </repositories>

    <properties>
        <maven.compiler.source>23</maven.compiler.source>
        <maven.compiler.target>23</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>33.4.0-jre</version>
		</dependency>
		<dependency>
		    <groupId>org.ow2.sat4j</groupId>
		    <artifactId>org.ow2.sat4j.core</artifactId>
		    <version>2.3.4</version>
        </dependency>
		<dependency>
        <!-- https://mvnrepository.com/artifact/org.bitbucket.vahidi/jdd -->
            <groupId>org.bitbucket.vahidi</groupId>
            <artifactId>jdd</artifactId>
            <version>108</version>
		</dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.17.0</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.sosy-lab/java-smt -->
        <dependency>
            <groupId>org.sosy-lab</groupId>
            <artifactId>java-smt</artifactId>
            <version>5.0.1</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/tools.aqua/z3-turnkey -->
        <dependency>
            <groupId>tools.aqua</groupId>
            <artifactId>z3-turnkey</artifactId>
            <version>4.13.4</version>
        </dependency>


    </dependencies>

    <build>
      <plugins>
	<plugin>
	  <groupId>org.apache.maven.plugins</groupId>
	  <artifactId>maven-compiler-plugin</artifactId>
	  <version>3.2</version>
	</plugin>
    <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
              <argLine>-Xmx4g</argLine>
        </configuration>
    </plugin>
	<plugin>
		<groupId>org.apache.lucene</groupId>
		<artifactId>lucene-core</artifactId>
	</plugin>
	<plugin>
		<groupId>org.apache.lucene</groupId>
		<artifactId>lucene-core</artifactId>
	</plugin>
      </plugins>
    </build>
</project>

